<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/top_background"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/topic_attr"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/topic_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp" >

        <RadioButton
            android:id="@+id/topic_all2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/topic_all"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/topic_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_normal"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/topic_abnormal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_abnormal"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/topic_type"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <RadioGroup
        android:id="@+id/topic_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginStart="10dp" >

        <RadioButton
            android:id="@+id/topic_all1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/topic_all"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/topic_leader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_leader"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/topic_depar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_depar"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/topic_other"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/topic_other"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </RadioGroup>

</LinearLayout>