<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fadeScrollbars="true"
    android:fillViewport="true"
    android:scrollbars="vertical" 
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dip"
            android:contentDescription="@string/notext"
            android:src="@drawable/offline_user" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dip"
            android:gravity="center_horizontal" >

            <TextView
                android:id="@+id/tv1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/loginname"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/loginname"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv1"
                android:layout_toRightOf="@+id/tv1"
                android:background="@drawable/edittext"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="10dip" >

            <TextView
                android:id="@+id/tv2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textSize="25sp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="200dip"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/tv2"
                android:layout_toRightOf="@+id/tv2"
                android:background="@drawable/edittext"
                android:inputType="textPassword"
                android:textSize="25sp" />
        </RelativeLayout>

        <Button
            android:id="@+id/loginbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dip"
            android:text="登录"
            android:textSize="25sp" />
    </LinearLayout>

</ScrollView>